Lab 9.